// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentPage /> Renders correctly in various states should render a free basket 1`] = `
<div>
  <div
    class="page__payment container-fluid py-5"
  >
    <div
      class="row"
    >
      <h1
        class="sr-only"
      >
        Payment
      </h1>
      <div
        class="col-md-5 pr-md-5 col-basket-summary"
      >
        <section
          aria-label="Shopping Cart Details"
          aria-live="polite"
          aria-relevant="all"
        >
          <div>
            <span
              class="sr-only"
            >
              Shopping cart details are loaded.
            </span>
            <div
              class="basket-section"
            >
              <h5
                aria-level="2"
              >
                In Your Cart
              </h5>
              <p>
                Your purchase contains the following:
              </p>
              <div
                class="row align-items-center mb-3 product-wrapper"
              >
                <div
                  class="col-5"
                >
                  <div
                    class="embed-responsive embed-responsive-16by9"
                  >
                    <img
                      alt=""
                      class="img-thumbnail product-thumbnail"
                      src="https://edx.org/po.jpg"
                    />
                  </div>
                </div>
                <div
                  class="col-7"
                >
                  <h6
                    aria-level="3"
                    class="m-0"
                  >
                    Introduction to Dogs
                  </h6>
                  <p
                    class="m-0"
                  >
                    Verified Certificate
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="summary-heading"
              aria-live="polite"
              class="basket-section"
              role="region"
            >
              <h5
                aria-level="2"
                id="summary-heading"
              >
                Summary
              </h5>
               
              <div
                class="summary-row d-flex"
              >
                <span
                  class="flex-grow-1"
                >
                  Price
                </span>
                <span
                  class="summary-price"
                >
                  £103.07
                </span>
              </div>
              <div
                class="summary-row font-weight-bold d-flex"
              >
                <span
                  class="flex-grow-1"
                >
                  TOTAL
                </span>
                <span
                  class="text-right"
                >
                  £103.07
                </span>
              </div>
            </div>
            <div
              class="basket-section"
            >
              <h5
                aria-level="2"
              >
                Order Details
              </h5>
              <p>
                After you complete your order you will be able to select course dates from your dashboard.
              </p>
            </div>
          </div>
        </section>
      </div>
      <div
        class="col-md-7 pl-md-5"
      >
        <section
          aria-label="Payment Details"
        >
          <a
            class="pgn__hyperlink default-link standalone-link btn btn-primary btn-lg"
            href="http://localhost:18130/checkout/free-checkout/"
            target="_self"
          >
            Place Order
          </a>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render a redirect spinner 1`] = `
<div>
  <div
    class="page__payment container-fluid py-5"
  >
    <div>
      <div
        class="d-flex justify-content-center align-items-center flex-column"
        style="height: 50vh;"
      >
        <div
          class="spinner-border text-primary"
          data-testid="loading-page"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading basket...
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render an empty cart 1`] = `
<div>
  <div
    class="page__payment container-fluid py-5"
  >
    <div
      class="card"
    >
      <div
        class="card-body"
      >
        <h5
          class="card-title"
        >
          Your cart is empty.
        </h5>
        <p
          class="card-text"
        >
          If you attempted to make a purchase, you have not been charged. Return to your 
          <a
            class="pgn__hyperlink default-link standalone-link"
            href="http://localhost:18000"
            target="_self"
          >
            dashboard
          </a>
           to try again, or 
          <a
            class="pgn__hyperlink default-link standalone-link"
            href="http://localhost:18000/support"
            target="_self"
          >
            contact edX E-commerce Support
          </a>
          .
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render its default (loading) state 1`] = `
<div>
  <div
    class="page__payment container-fluid py-5"
  >
    <div
      class="row"
    >
      <h1
        class="sr-only"
      >
        Payment
      </h1>
      <div
        class="col-md-5 pr-md-5 col-basket-summary"
      >
        <section
          aria-label="Shopping Cart Details"
          aria-live="polite"
          aria-relevant="all"
        >
          <div>
            <span
              class="sr-only"
            >
              Loading, please wait...
            </span>
            <div
              class="skeleton py-2 mb-3 w-50"
            />
            <div
              class="skeleton py-2 mb-4 mr-4"
            />
            <div
              class="row align-items-center mb-5"
            >
              <div
                class="col-5"
              >
                <div
                  class="skeleton embed-responsive embed-responsive-16by9"
                />
              </div>
              <div
                class="col-7"
              >
                <div
                  class="skeleton py-2 mb-3 w-50"
                />
                <div
                  class="skeleton py-2 mr-4"
                />
              </div>
            </div>
            <div
              class="skeleton py-2 mb-3 w-50"
            />
            <div
              class="skeleton py-2 mb-2"
            />
            <div
              class="skeleton py-2 mb-5"
            />
            <div
              class="skeleton py-2 mb-3 w-50"
            />
            <div
              class="skeleton py-2 mb-2 mr-4"
            />
            <div
              class="skeleton py-2 mb-5 w-75"
            />
          </div>
        </section>
      </div>
      <div
        class="col-md-7 pl-md-5"
      >
        <section
          aria-label="Payment Details"
        >
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              Checkout with PayPal
            </h5>
            <p
              class="d-flex flex-wrap"
            >
              <button
                class="payment-method-button active skeleton-pulse"
                data-testid="PayPalButton"
                disabled=""
                type="button"
              >
                <img
                  alt="PayPal"
                  src="test-file-stub"
                />
              </button>
            </p>
          </div>
          <div
            class="skeleton py-1 mb-3 w-25"
          />
          <div
            class="row"
          >
            <div
              class="col-lg-6"
            >
              <div
                class="skeleton py-3 mb-3"
              />
              <div
                class="skeleton py-3 mb-3"
              />
              <div
                class="skeleton py-3 mb-3"
              />
              <div
                class="skeleton py-3 mb-3"
              />
            </div>
            <div
              class="col-lg-6"
            >
              <div
                class="skeleton py-3 mb-3"
              />
              <div
                class="skeleton py-3 mb-3"
              />
              <div
                class="skeleton py-3 mb-3"
              />
              <div
                class="skeleton py-3 mb-3"
              />
            </div>
          </div>
          <div
            class="skeleton py-1 mb-3 mt-5 w-25"
          />
          <div
            class="row"
          >
            <div
              class="col-lg-6"
            >
              <div
                class="skeleton py-3 mb-3"
              />
            </div>
            <div
              class="col-lg-6"
            >
              <div
                class="skeleton py-3 mb-3"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render the basket 1`] = `
<div>
  <div
    class="page__payment container-fluid py-5"
  >
    <div
      class="row"
    >
      <h1
        class="sr-only"
      >
        Payment
      </h1>
      <div
        class="col-md-5 pr-md-5 col-basket-summary"
      >
        <section
          aria-label="Shopping Cart Details"
          aria-live="polite"
          aria-relevant="all"
        >
          <div>
            <span
              class="sr-only"
            >
              Shopping cart details are loaded.
            </span>
            <div
              class="basket-section"
            >
              <h5
                aria-level="2"
              >
                In Your Cart
              </h5>
              <p>
                Your purchase contains the following:
              </p>
              <div
                class="row align-items-center mb-3 product-wrapper"
              >
                <div
                  class="col-5"
                >
                  <div
                    class="embed-responsive embed-responsive-16by9"
                  >
                    <img
                      alt=""
                      class="img-thumbnail product-thumbnail"
                      src="https://edx.org/vot.png"
                    />
                  </div>
                </div>
                <div
                  class="col-7"
                >
                  <h6
                    aria-level="3"
                    class="m-0"
                  >
                    Introduction to Llamass
                  </h6>
                  <p
                    class="m-0"
                  >
                    Verified Certificate
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="summary-heading"
              aria-live="polite"
              class="basket-section"
              role="region"
            >
              <h5
                aria-level="2"
                id="summary-heading"
              >
                Summary
              </h5>
               
              <div
                class="summary-row d-flex"
              >
                <span
                  class="flex-grow-1"
                >
                  Price
                </span>
                <span
                  class="summary-price"
                >
                  £464.88
                </span>
              </div>
              <div
                class="summary-row font-weight-bold d-flex"
              >
                <span
                  class="flex-grow-1"
                >
                  TOTAL
                </span>
                <span
                  class="text-right"
                >
                  £464.88
                </span>
              </div>
            </div>
            <div
              class="basket-section"
            >
              <h5
                aria-level="2"
              >
                Order Details
              </h5>
              <p>
                After you complete your order you will be able to select course dates from your dashboard.
              </p>
            </div>
          </div>
        </section>
      </div>
      <div
        class="col-md-7 pl-md-5"
      >
        <section
          aria-label="Payment Details"
        >
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              Checkout with PayPal
            </h5>
            <p
              class="d-flex flex-wrap"
            >
              <button
                class="payment-method-button active"
                data-testid="PayPalButton"
                type="button"
              >
                <img
                  alt="PayPal"
                  src="test-file-stub"
                />
              </button>
            </p>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render the basket for a bulk order 1`] = `
<div>
  <div
    class="page__payment container-fluid py-5"
  >
    <div
      class="row"
    >
      <h1
        class="sr-only"
      >
        Payment
      </h1>
      <div
        class="col-md-5 pr-md-5 col-basket-summary"
      >
        <section
          aria-label="Shopping Cart Details"
          aria-live="polite"
          aria-relevant="all"
        >
          <div>
            <span
              class="sr-only"
            >
              Shopping cart details are loaded.
            </span>
            <div
              class="basket-section"
            >
              <h5
                aria-level="2"
              >
                In Your Cart
              </h5>
              <p>
                Your purchase contains the following:
              </p>
              <div
                class="row align-items-center mb-3 product-wrapper"
              >
                <div
                  class="col-5"
                >
                  <div
                    class="embed-responsive embed-responsive-16by9"
                  >
                    <img
                      alt=""
                      class="img-thumbnail product-thumbnail"
                      src="https://edx.org/lu.jpg"
                    />
                  </div>
                </div>
                <div
                  class="col-7"
                >
                  <h6
                    aria-level="3"
                    class="m-0"
                  >
                    Introduction to Guanacos
                  </h6>
                  <p
                    class="m-0"
                  >
                    Verified Certificate
                  </p>
                </div>
              </div>
              <form
                class="summary-row form-inline"
              >
                <div
                  class="form-group mr-2"
                >
                  <label
                    for="code-quantity"
                  >
                    Quantity
                  </label>
                  <div
                    class="position-relative ml-2"
                  >
                    <div
                      class="pgn__form-control-decorator-group"
                    >
                      <input
                        class="has-value form-control"
                        id="code-quantity"
                        max="100"
                        min="1"
                        name="code-quantity"
                        style="width: 5rem;"
                        type="number"
                        value="1"
                      />
                    </div>
                    <small
                      class="text-muted small"
                      style="position: absolute; top: 100%; left: 0px;"
                    >
                      Max: 100
                    </small>
                  </div>
                </div>
                <button
                  aria-disabled="false"
                  aria-live="assertive"
                  class="pgn__stateful-btn pgn__stateful-btn-state-default btn btn-primary btn-sm"
                  type="submit"
                >
                  <span
                    class="d-flex align-items-center justify-content-center"
                  >
                    <span>
                      Update
                    </span>
                  </span>
                </button>
              </form>
            </div>
            <div
              aria-labelledby="summary-heading"
              aria-live="polite"
              class="basket-section"
              role="region"
            >
              <h5
                aria-level="2"
                id="summary-heading"
              >
                Summary
              </h5>
               
              <div
                class="summary-row"
              >
                <table
                  class="w-100"
                >
                  <thead>
                    <tr>
                      <th
                        class="font-weight-normal"
                      >
                        Price
                      </th>
                      <th
                        class="font-weight-normal"
                      >
                        Quantity
                      </th>
                      <th
                        class="font-weight-normal text-right"
                      >
                        Subtotal
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        £66.22
                      </td>
                      <td>
                        1
                      </td>
                      <td
                        class="text-right"
                      >
                        £66.22
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                class="summary-row font-weight-bold d-flex"
              >
                <span
                  class="flex-grow-1"
                >
                  TOTAL
                </span>
                <span
                  class="text-right"
                >
                  £66.22
                </span>
              </div>
            </div>
            <div
              class="basket-section"
            >
              <h5
                aria-level="2"
              >
                Order Details
              </h5>
              <p>
                By purchasing, you and your organization agree to the following terms:
              </p>
              <ul>
                <li>
                  Each code is valid for the one course covered and can be used only one time.
                </li>
                <li>
                  You are responsible for distributing codes to your learners in your organization.
                </li>
                <li>
                  Each code will expire in one year from date of purchase or, if earlier, once the course is closed.
                </li>
                <li>
                  If a course is not designated as self-paced, you should confirm that a course run is available before expiration.
                </li>
                <li>
                  You may not resell codes to third parties.
                </li>
                <li>
                  All edX for Business sales are final and not eligible for refunds.
                </li>
              </ul>
              <p>
                You will receive an email at person@edx.org with your enrollment code(s).
              </p>
            </div>
          </div>
        </section>
      </div>
      <div
        class="col-md-7 pl-md-5"
      >
        <section
          aria-label="Payment Details"
        >
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              Checkout with PayPal
            </h5>
            <p
              class="d-flex flex-wrap"
            >
              <button
                class="payment-method-button active"
                data-testid="PayPalButton"
                type="button"
              >
                <img
                  alt="PayPal"
                  src="test-file-stub"
                />
              </button>
            </p>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render the basket in a different currency 1`] = `
<div>
  <div
    class="page__payment container-fluid py-5"
  >
    <div
      class="row"
    >
      <h1
        class="sr-only"
      >
        Payment
      </h1>
      <div
        class="col-md-5 pr-md-5 col-basket-summary"
      >
        <section
          aria-label="Shopping Cart Details"
          aria-live="polite"
          aria-relevant="all"
        >
          <div>
            <span
              class="sr-only"
            >
              Shopping cart details are loaded.
            </span>
            <div
              class="basket-section"
            >
              <h5
                aria-level="2"
              >
                In Your Cart
              </h5>
              <p>
                Your purchase contains the following:
              </p>
              <div
                class="row align-items-center mb-3 product-wrapper"
              >
                <div
                  class="col-5"
                >
                  <div
                    class="embed-responsive embed-responsive-16by9"
                  >
                    <img
                      alt=""
                      class="img-thumbnail product-thumbnail"
                      src="https://edx.org/watpewal.gif"
                    />
                  </div>
                </div>
                <div
                  class="col-7"
                >
                  <h6
                    aria-level="3"
                    class="m-0"
                  >
                    Introduction to Pigeonss
                  </h6>
                  <p
                    class="m-0"
                  >
                    Verified Certificate
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="summary-heading"
              aria-live="polite"
              class="basket-section"
              role="region"
            >
              <h5
                aria-level="2"
                id="summary-heading"
              >
                Summary
              </h5>
               
              <div
                class="summary-row d-flex"
              >
                <span
                  class="flex-grow-1"
                >
                  Price
                </span>
                <span
                  class="summary-price"
                >
                  <span>
                    MX$8,500
                     *
                  </span>
                </span>
              </div>
              <div
                class="summary-row font-weight-bold d-flex"
              >
                <span
                  class="flex-grow-1"
                >
                  TOTAL
                </span>
                <span
                  class="text-right"
                >
                  <span>
                    MX$8,500
                     *
                  </span>
                </span>
              </div>
              <div
                class="text-muted font-italic"
              >
                * This total contains an approximate conversion. You will be charged 
                £445.19
                 GBP.
              </div>
            </div>
            <div
              class="basket-section"
            >
              <h5
                aria-level="2"
              >
                Order Details
              </h5>
              <p>
                After you complete your order you will be able to select course dates from your dashboard.
              </p>
            </div>
          </div>
        </section>
      </div>
      <div
        class="col-md-7 pl-md-5"
      >
        <section
          aria-label="Payment Details"
        >
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              Checkout with PayPal
            </h5>
            <p
              class="d-flex flex-wrap"
            >
              <button
                class="payment-method-button active"
                data-testid="PayPalButton"
                type="button"
              >
                <img
                  alt="PayPal"
                  src="test-file-stub"
                />
              </button>
            </p>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render the basket with an enterprise offer 1`] = `
<div>
  <div
    class="page__payment container-fluid py-5"
  >
    <div
      class="row"
    >
      <h1
        class="sr-only"
      >
        Payment
      </h1>
      <div
        class="col-md-5 pr-md-5 col-basket-summary"
      >
        <section
          aria-label="Shopping Cart Details"
          aria-live="polite"
          aria-relevant="all"
        >
          <div>
            <span
              class="sr-only"
            >
              Shopping cart details are loaded.
            </span>
            <div
              class="basket-section"
            >
              <h5
                aria-level="2"
              >
                In Your Cart
              </h5>
              <p>
                Your purchase contains the following:
              </p>
              <div
                class="row align-items-center mb-3 product-wrapper"
              >
                <div
                  class="col-5"
                >
                  <div
                    class="embed-responsive embed-responsive-16by9"
                  >
                    <img
                      alt=""
                      class="img-thumbnail product-thumbnail"
                      src="https://edx.org/lekigud.gif"
                    />
                  </div>
                </div>
                <div
                  class="col-7"
                >
                  <h6
                    aria-level="3"
                    class="m-0"
                  >
                    Introduction to Pigs
                  </h6>
                  <p
                    class="m-0"
                  >
                    Verified Certificate
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="summary-heading"
              aria-live="polite"
              class="basket-section"
              role="region"
            >
              <h5
                aria-level="2"
                id="summary-heading"
              >
                Summary
              </h5>
               
              <div
                class="summary-row d-flex"
              >
                <span
                  class="flex-grow-1"
                >
                  Price
                </span>
                <span
                  class="summary-price"
                >
                  £158.87
                </span>
              </div>
              <div
                class="summary-row"
              >
                <p
                  class="d-flex m-0"
                >
                  <span
                    class="flex-grow-1"
                  >
                    Discounts applied
                  </span>
                  <span>
                    £0.00
                  </span>
                </p>
                <p
                  class="m-0 text-muted"
                >
                  50%
                   discount provided by Pied Piper.
                </p>
              </div>
              <div
                class="summary-row font-weight-bold d-flex"
              >
                <span
                  class="flex-grow-1"
                >
                  TOTAL
                </span>
                <span
                  class="text-right"
                >
                  £158.87
                </span>
              </div>
            </div>
            <div
              class="basket-section"
            >
              <h5
                aria-level="2"
              >
                Order Details
              </h5>
              <p>
                After you complete your order you will be able to select course dates from your dashboard.
              </p>
            </div>
          </div>
        </section>
      </div>
      <div
        class="col-md-7 pl-md-5"
      >
        <section
          aria-label="Payment Details"
        >
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              Checkout with PayPal
            </h5>
            <p
              class="d-flex flex-wrap"
            >
              <button
                class="payment-method-button active"
                data-testid="PayPalButton"
                type="button"
              >
                <img
                  alt="PayPal"
                  src="test-file-stub"
                />
              </button>
            </p>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;
